# vertical3d

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  monorepo.sln  vcpkg-configuration.json  vcpkg.json
api/: CMakeLists.txt
api/asset/: Asset.cpp  Asset.h  CMakeLists.txt  Cache.h  Font2D.cpp  Font2D.h  Image.cpp  Image.h  Json.cpp  Json.h  JsonFile.cpp  JsonFile.h  Loader.cpp  Loader.h  Manager.cpp  Manager.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Sound.cpp  Sound.h  Text.cpp  Text.h  TextureFont.cpp  TextureFont.h  Type.h
api/audio/: AudioClip.cpp  AudioClip.h  CMakeLists.txt  Engine.cpp  Engine.h
api/brep/: BRep.cxx  BRep.h  Edge.cxx  Edge.h  Face.cxx  Face.h  HalfEdge.cxx  HalfEdge.h  HalfEdgeBRep.cxx  HalfEdgeBRep.h  Vertex.cxx  Vertex.h  WingedEdgeBRep.cxx  WingedEdgeBRep.h
api/component/: CMakeLists.txt  Position.cpp  Position.h
api/config/: BindingContext.cpp  BindingContext.h  CMakeLists.txt  Config.cpp  Config.h  Type.h
api/dag/: Edge.cxx  Edge.h  Group.cxx  Group.h  Node.cxx  Node.h  Root.cxx  State.cxx  State.h  Transform.cxx
api/ecs/: CMakeLists.txt  System.cpp  System.h
api/engine/: CMakeLists.txt  Engine.cpp  Engine.h  Feature.h
api/event/: CMakeLists.txt  Context.cpp  Context.h  Engine.cpp  Engine.h  Event.cpp  Event.h  Key.cpp  Key.h  KeyDown.cpp  KeyDown.h  KeyUp.cpp  KeyUp.h  Mapper.cpp  Mapper.h  MouseButton.cpp  MouseButton.h  Sound.cpp  Sound.h  Source.cpp  Source.h  Type.h  WindowResize.cpp  WindowResize.h
api/font/: BitmapFont.cxx  BitmapFont.h  BitmapTextBuffer.cxx  BitmapTextBuffer.h  CMakeLists.txt  Font2D.cxx  Font2D.h  FontCache.cxx  FontCache.h  TextBuffer.cxx  TextBuffer.h  TextureFont.cxx  TextureFont.h  TextureFontCache.cxx  TextureFontCache.h  TextureTextBuffer.cxx  TextureTextBuffer.h
api/gl/: BitmapFontRenderer.cxx  BitmapFontRenderer.h  CMakeLists.txt  Canvas.cxx  Canvas.h  GLFontRenderer.cxx  GLFontRenderer.h  GLTexture.cxx  GLTexture.h  Program.cxx  Program.h  Shader.cxx  Shader.h  TextureAtlas.cxx  TextureAtlas.h  TextureFontRenderer.cxx  TextureFontRenderer.h  VertexBuffer.cxx  VertexBuffer.h
api/image/: CMakeLists.txt  Factory.cxx  Factory.h  Reader.cxx  Reader.h  Texture.h  TextureAtlas.cxx  TextureAtlas.h  Writer.cxx  Writer.h
api/input/: CMakeLists.txt  Device.cpp  Device.h  DeviceType.h  Engine.cpp  Engine.h  KeyState.cpp  KeyState.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
api/log/: CMakeLists.txt  Logger.cpp  Logger.h
api/render/: CMakeLists.txt
api/type/: AABBox.cxx  AABBox.h  ArcBall.cxx  ArcBall.h  Bound2D.cxx  Bound2D.h  CMakeLists.txt  Camera.cxx  Camera.h  CameraProfile.cxx  String.cxx  String.h
api/ui/: CMakeLists.txt  Component.cpp  Component.h  Container.cpp  Container.h  Engine.cpp  Engine.h  Navigation.h  Overlay.cpp  Overlay.h  Style.cpp  Style.h  Window.cpp  Window.h
imagetool/: CMakeLists.txt  imagetool.cxx
luxa/luxa/: Button.cxx  Button.h  CMakeLists.txt  CheckBox.h  Component.cxx  Component.h  ComponentManager.cxx  ComponentManager.h  ComponentRenderer.cxx  ComponentRenderer.h  Container.cxx  Dialog.h  Frame.h  HorizontalBox.cxx  Icon.cxx  Icon.h  Label.cxx  Label.h  Overlay.cxx  Overlay.h  RadioButton.h  Scrollbar.h  Spinner.h  TabBar.h  TabPage.h  TextBox.h  UILoader.cxx  UILoader.h  VerticalBox.cxx  Window.h
moya/libmoya/: Bucket.cxx  Bucket.h  CMakeLists.txt  FrameBuffer.cxx  FrameBuffer.h  Frustum.cxx  Frustum.h  Makefile.am  MicroPolygon.cxx  MicroPolygon.h  MicroPolygonGrid.cxx  MicroPolygonGrid.h  Plane.cxx  Plane.h  Polygon.cxx  Polygon.h  RenderContext.cxx  RenderContext.h  RenderMan.cxx  RenderMan.h  Renderer.cxx  Renderer.h  ReyesPrimitive.cxx  ReyesPrimitive.h  Vertex.cxx  Vertex.h
moya/moya/: CMakeLists.txt  Makefile.am  moya.cxx
moya/tests/: Makefile.am  PolygonTest.cxx  RenderContextTest.cxx  RendererTest.cxx  ReyesPrimitiveTest.cxx  TestMain.cxx  VertexTest.cxx
odyssey/: CMakeLists.txt  Odyssey.cpp  Odyssey.h
odyssey/actor/: Actor.h
odyssey/asset/: Asset.cpp  Asset.h  Cache.cpp  Cache.h  Image.cpp  Image.h  Json.cpp  Json.h  Loader.cpp  Loader.h  Manager.cpp  Manager.h  Type.h
odyssey/cmake/: FindSDL2.cmake
odyssey/component/: Position.cpp  Position.h
odyssey/config/: BindingContext.cpp  BindingContext.h  Bootstrap.cpp  Bootstrap.h  Config.cpp  Config.h  JsonFile.cpp  JsonFile.h
odyssey/data/: bindings.json  bootstrap.json  config.json  player.json  window.json
odyssey/engine/: Engine.cpp  Engine.h  Logger.cpp  Logger.h  Player.cpp  Player.h  Sprite.h  SpriteSheet.h  Unit.h
odyssey/event/: Key.cpp  Key.h  KeyDown.cpp  KeyDown.h  KeyUp.cpp  KeyUp.h
odyssey/image/: Image.cpp  Image.h  Reader.cpp  Reader.h
odyssey/input/: Device.cpp  Device.h  Engine.cpp  Engine.h  KeyState.cpp  KeyState.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
odyssey/render/: Context.cpp  Context.h  Engine.cpp  Engine.h  Frame.cpp  Frame.h  Operation.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  TextureCache.cpp  TextureCache.h
odyssey/system/: Movement.cpp  Movement.h
odyssey/tile/: Size.h  Tile.h
odyssey/ui/: Screen.cpp  Screen.h  Window.cpp  Window.h
pong/: .gitignore  CMakeLists.txt  README.md
pong/data/: bindings.json  config.json  config.xml  fonts.json  mappings.json  sounds.json  vgui.json  window.json
pong/pong/: pong.vcxproj  pong.vcxproj.filters
pong/src/: Ball.cxx  Ball.h  GameState.cxx  GameState.h  Paddle.cxx  Paddle.h  PongController.cxx  PongController.h  PongEngine.cxx  PongEngine.h  PongRenderer.cxx  PongRenderer.h  PongScene.cxx  PongScene.h  pong.cxx
quantumxml/: CMakeLists.txt
rigel/libmoya/: Bucket.cxx  Bucket.h  FrameBuffer.cxx  FrameBuffer.h  Frustum.cxx  Frustum.h  Makefile.am  Moya.cxx  (+19 more)
talyn/: CMakeLists.txt
tetris/: CMakeLists.txt
v3dlibs/: CMakeLists.txt
vertical3d/: CMakeLists.txt  CameraControlTool.cxx  CameraControlTool.h  Controller.cxx  Controller.h  HWRenderContext.cxx  HWRenderContext.h  Makefile.am  Tool.h  ViewPort.cxx  ViewPort.h  Visitor.h  vertical3d.cxx
voxel/: CMakeLists.txt
(+599 files in other folders)
