add_library("quantumxml" "Exception.h" "Exception.cxx" "FSMParser.h" "FSMParser.cxx" "Parser.h" "Parser.cxx" "Stream.h" "Stream.cxx"
	"Tree.h" "URL.h" "URL.cxx" "Validator.h" "Validator.cxx" "XMLString.h"
	"tree/AttDef.h" "tree/AttDef.cxx" "tree/AttList.h" "tree/AttList.cxx" "tree/Attribute.h" "tree/Attribute.cxx" "tree/CDSect.h" 
	"tree/CDSect.cxx" "tree/CharData.h" "tree/CharData.cxx" "tree/Comment.h" "tree/Comment.cxx" "tree/Doctype.h" "tree/Doctype.cxx"
	"tree/Document.h" "tree/Document.cxx" "tree/Element.h" "tree/Element.cxx" "tree/ElementDecl.h" "tree/ElementDecl.h"
	"tree/Entity.h" "tree/Entity.cxx" "tree/ExternalID.h" "tree/ExternalID.cxx" "tree/Misc.h" "tree/Misc.cxx" "tree/Node.h"
	"tree/Node.cxx" "tree/Notation.h" "tree/Notation.cxx" "tree/ProcessingInstruction.h" "tree/ProcessingInstruction.cxx"
	"tree/Reference.h" "tree/Reference.cxx" "states/AttlistDecl.h" "states/AttlistDecl.cxx" "states/Attribute.h" "states/Attribute.h"
	"states/CDSect.h" "states/CDSect.cxx" "states/Comment.h" "states/Comment.cxx" "states/DoctypeDecl.h" "states/DoctypeDecl.cxx"
	"states/Document.h" "states/Document.cxx" "states/Element.h" "states/Element.cxx" "states/ElementDecl.h" "states/ElementDecl.cxx"
	"states/EntityDecl.h" "states/EntityDecl.cxx" "states/Misc.h" "states/Misc.cxx" "states/NotationDecl.h" "states/NotationDecl.cxx"
	"states/ProcessingInstruction.h" "states/ProcessingInstruction.cxx" "states/XMLDecl.h" "states/XMLDecl.cxx"
	"fsm/Functor.h" "fsm/MultiState.h" "fsm/State.h" "fsm/StateBase.h" "fsm/StateBase.cxx" "fsm/StateMachine.h" "fsm/StateMachine.cxx"
	"DOM/Attr.h" "DOM/Attr.cxx" "DOM/CDATASection.h" "DOM/CDATASection.cxx" "DOM/CharacterData.h" "DOM/CharacterData.cxx"
	"DOM/Comment.h" "DOM/Comment.cxx" "DOM/Document.h" "DOM/Document.cxx" "DOM/DocumentFragment.h" "DOM/DocumentFragment.cxx"
	"DOM/DocumentType.h" "DOM/DocumentType.cxx" "DOM/DOMException.h" "DOM/DOMException.cxx" "DOM/DOMImplementation.h"
	"DOM/DOMImplementation.cxx" "DOM/DOMString.h" "DOM/DOMString.cxx" "DOM/Element.h" "DOM/Element.cxx" "DOM/Entity.h" "DOM/Entity.cxx"
	"DOM/EntityReference.h" "DOM/EntityReference.cxx" "DOM/NamedNodeMap.h" "DOM/NamedNodeMap.cxx" "DOM/Node.h" "DOM/Node.cxx"
	"DOM/NodeList.h" "DOM/NodeList.cxx" "DOM/Notation.h" "DOM/Notation.cxx" "DOM/ProcessingInstruction.h" "DOM/ProcessingInstruction.cxx"
	"DOM/Text.h" "DOM/Text.cxx")
