cmake_minimum_required (VERSION 3.8)


add_subdirectory("audio")
add_subdirectory("brep")
add_subdirectory("command")
add_subdirectory("core")
add_subdirectory("event")
add_subdirectory("font")
add_subdirectory("gl")
add_subdirectory("gui")
add_subdirectory("hookah")
add_subdirectory("image")
add_subdirectory("input")
add_subdirectory("type")
add_subdirectory("util")
add_subdirectory("imagetool")