add_executable("voxel" 
	"src/engine/Aligned.h"
	"src/engine/Camera.h" "src/engine/Camera.cxx"
	"src/engine/Light.h" "src/engine/Light.cxx"
	"src/engine/Material.h" "src/engine/Material.cxx"
	"src/engine/MaterialFactory.h" "src/engine/MaterialFactory.cxx"
	"src/engine/MortonCode.h" "src/engine/MortonCode.cxx"
	"src/engine/VertexBufferBuilder.h" "src/engine/VertexBufferBuilder.cxx"
	"src/game/GameState.h" "src/game/GameState.cxx"
	"src/game/Item.h" "src/game/Item.cxx"
	"src/voxel/Chunk.h" "src/voxel/Chunk.cxx"
	"src/voxel/ChunkBufferPool.h" "src/voxel/ChunkBufferPool.cxx"
	"src/voxel/MeshBuilder.h" "src/voxel/MeshBuilder.cxx"
	"src/voxel/MeshCache.h" "src/voxel/MeshCache.cxx"
	"src/voxel/TerrainMap.h" "src/voxel/TerrainMap.cxx"
	"src/voxel/Voxel.h" "src/voxel/Voxel.cxx"
	"src/voxel/World.h" "src/voxel/World.cxx"
	"src/Controller.h" "src/Controller.cxx"
	"src/DebugOverlay.h" "src/DebugOverlay.cxx"
	"src/Renderer.h" "src/Renderer.cxx"
	"src/Scene.h" "src/Scene.cxx"
	"src/Version.h" "src/main.cxx")
