add_library("v3dlib_ui"
 "component/Button.h" "component/Button.cpp" 
 "Component.h" "Component.cpp" 
 "component/Icon.h" "component/Icon.cpp" 
 "component/Label.h" "component/Label.cpp" 
 "Overlay.h" "Overlay.cpp" 
"component/Dialog.h" 
"component/Frame.h" 
"component/HorizontalBox.h" "component/HorizontalBox.cpp"
"component/InputBox.h" 
"component/RadioButton.h" 
"component/Scrollbar.h" 
"component/SelectList.h"
"component/Spinner.h" 
"component/TabBar.h" 
"component/TabPage.h" 
"component/TextBox.h"
"component/ToolTip.h" 
"component/VerticalBox.h" "component/VerticalBox.cpp"
"Container.h" "Container.cpp" 
"style/Button.h" 
"Style.h" "Style.cpp" 
"style/Property.h" "style/Property.cpp" 
"style/property/Font.h" "style/property/Font.cpp" 
"style/property/Image.h" "style/property/Image.cpp"
"style/Theme.h" "style/Theme.cpp" 
"style/Button.cpp" 
"style/Menu.h" "style/Menu.cpp"
"component/CheckBox.h" 
"component/menu/PopupMenu.h"
"component/menu/RadialMenu.h"
"component/menu/MenuBar.h"
"component/menu/Menu.h" "component/menu/Menu.cpp"
"component/menu/MenuItem.h" "component/menu/MenuItem.cpp"
"Engine.h" "Engine.cpp" "component/menu/Type.h" "component/Type.h" "component/menu/MenuBar.cpp" "Navigation.h")

# Workaround for a boost log ABI bug - https://github.com/microsoft/vcpkg/discussions/22762
target_compile_definitions(v3dlib_ui PUBLIC BOOST_USE_WINAPI_VERSION=0x0A00)
target_compile_definitions(v3dlib_ui PUBLIC _WIN32_WINNT=0x0A00)
target_compile_definitions(v3dlib_ui PUBLIC WINVER=0x0A00)
