add_library("luxa" "Button.h" "Button.cxx" "Component.h" "Component.cxx" "ComponentManager.h" "ComponentManager.cxx" "ComponentRenderer.h" "ComponentRenderer.cxx"
	"Container.h" "Container.cxx" "Dialog.h" "Frame.h" "HorizontalBox.h" "HorizontalBox.cxx" "Icon.h" "Icon.cxx" "InputBox.h" "Label.h" "Label.cxx" 
	"Overlay.h" "Overlay.cxx" "RadioButton.h" "Scrollbar.h" "SelectList.h" "Spinner.h" "TabBar.h" "TabPage.h" "TextBox.h" "ToolTip.h" "UILoader.h" "UILoader.cxx"
	"VerticalBox.h" "VerticalBox.cxx" "Window.h" "menu/Menu.h" "menu/Menu.cxx" "menu/MenuBar.h" "menu/MenuItem.h" "menu/MenuItem.cxx" "menu/MenuStack.h" 
	"menu/MenuStack.cxx" "menu/PopupMenu.h" "menu/RadialMenu.h" "style/ButtonStyle.h" "style/ButtonStyle.cxx" "style/ColorStyleProperty.h" "style/ColorStyleProperty.cxx"
	"style/FontStyleProperty.h" "style/FontStyleProperty.cxx" "style/ImageStyleProperty.h" "style/ImageStyleProperty.cxx" "style/MenuStyle.h" "style/MenuStyle.cxx"
	"style/Style.h" "style/Style.cxx" "style/StyleProperty.h" "style/StyleProperty.cxx" "style/Theme.h" "style/Theme.cxx")