AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I .

bin_PROGRAMS = moya
moya_SOURCES = \
moya.cxx

AM_CPPFLAGS = $(DEPS_CFLAGS) $(BOOST_CPPFLAGS) $(GCOV_CFLAGS)
AM_LDFLAGS = $(GCOV_LDFLAGS) $(V3D_TYPES_LDFLAGS) \
$(BOOST_SIGNALS_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)

moya_LDADD = $(DEPS_LIBS) \
 $(BOOST_SIGNALS_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) \
$(libpng_LIBS) $(JPEG_LIBS) $(liblog4cxx_LIBS) $(V3D_TYPES_LIBS) \
$(top_builddir)/src/libmoya/.libs/libmoya-@MOYA_API_VERSION@.la
