INCLUDES = -I$(top_srcdir)/. -I..
METASOURCES = AUTO
lib_LTLIBRARIES =  libmoya.la
libmoya_la_SOURCES = \
	Bucket.h \
	FrameBuffer.h \
	Frustum.h \
	MicroPolygon.h \
	MicroPolygon.cxx \
	MicroPolygonGrid.h \
	MicroPolygonGrid.cxx \
	Moya.h \
	Plane.h \
	Polygon.h \
	RenderContext.h \
	RenderMan.h \
	ReyesPrimitive.h \
	Sphere.h \
	FrameBuffer.cxx \
	Frustum.cxx \
	Moya.cxx \
	Plane.cxx \
	Polygon.cxx \
	RenderContext.cxx \
	RenderMan.cxx \
	Sphere.cxx \
	Bucket.cxx \
	ReyesPrimitive.cxx \
	Vertex.h \
	Vertex.cxx


