INCLUDES = 
METASOURCES = AUTO
lib_LTLIBRARIES =  libv3dcommand.la

libv3dcommandincludedir=$(includedir)/vertical3d-1.0
libv3dcommandinclude_HEADERS = \
	Command.h \
	CommandTable.h \
	CommandDirectory.h \
	Event.h \
	Tool.h

libv3dcommand_la_SOURCES = \
	Command.cxx \
	CommandTable.cxx \
	CommandDirectory.cxx \
	Event.cxx \
	Tool.cxx
