INCLUDES = -I$(top_srcdir)/.
METASOURCES = AUTO
lib_LTLIBRARIES = libv3dcore.la
libv3dcore_la_SOURCES = \
	CameraProfile.cxx \
	Camera.cxx \
	Scene.cxx \
	Project.cxx \
	brep/Vertex.cxx \
	brep/Edge.cxx \
	brep/Face.cxx \
	brep/WingedEdgeBRep.cxx \
	brep/HalfEdge.cxx \
	brep/HalfEdgeBRep.cxx \
	log/logstream.cxx

libv3dcoreincludedir=$(includedir)/vertical3d-1.0
libv3dcoreinclude_HEADERS = \
	CameraProfile.h \
	Camera.h \
	Project.h \
	Scene.h \
	brep/Vertex.h \
	brep/Edge.h \
	brep/HalfEdge.h \
	brep/HalfEdgeBRep.h \
	brep/Face.h \
	brep/WingedEdgeBRep.h \
	log/logstream.h \
	log/streamext.h

