INCLUDES = 
METASOURCES = AUTO
lib_LTLIBRARIES =  libv3dgraph.la

libv3dgraphincludedir=$(includedir)/vertical3d-1.0
libv3dgraphinclude_HEADERS = \
	Edge.h \
	Group.h \
	Node.h \
	Root.h \
	Set.h \
	State.h \
	Switch.h \
	Transform.h \
	View.h 

libv3dgraph_la_SOURCES = \
	Edge.cxx \
	Group.cxx \
	Node.cxx \
	Root.cxx \
	Set.cxx \
	State.cxx \
	Switch.cxx \
	Transform.cxx \
	View.cxx

