INCLUDES = 
METASOURCES = AUTO
lib_LTLIBRARIES =  libv3dtypes.la

libv3dtypesincludedir=$(includedir)/vertical3d-1.0
libv3dtypesinclude_HEADERS = \
	3DMath.h \
	AABBox.h \
	Color3.h \
	Matrix4.h \
	Quaternion.h \
	Vector2.h \
	Vector3.h \
	Vector4.h \
	Bound2D.h \
	Image.h \
	IOBase.h

libv3dtypes_la_SOURCES = \
	AABBox.cxx \
	Color3.cxx \
	Matrix4.cxx \
	Quaternion.cxx \
	Vector2.cxx \
	Vector3.cxx \
	Vector4.cxx \
	Bound2D.cxx \
	Image.cxx
